--- a/mobile/src/main/res/layout/content_main.xml
+++ b/mobile/src/main/res/layout/content_main.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
+    android:background="@color/backgroundDark"
     tools:context="com.platelkevin.newsstream.newsstream.MainActivity">
 
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listView"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:background="@color/backgroundDark"
+        android:layout_height="match_parent"/>
+</LinearLayout>
