--- a/mobile/src/main/res/layout/fragment_newsfeed.xml
+++ b/mobile/src/main/res/layout/fragment_newsfeed.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/default_padding"
+    android:elevation="2dp"
     android:orientation="vertical">
-
+    <TextView
+        android:id="@+id/newsFeedColor"
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/colorPrimary"
+        />
     <TextView
         android:id="@+id/title"
         android:text="@string/tmp_text"
@@ -19,4 +26,32 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/textColorLight"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <ImageButton
+            android:id="@+id/shareBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu_share"
+            android:background="@color/background"
+            android:layout_margin="@dimen/default_padding"
+            />
+
+        <ImageButton
+            android:id="@+id/deleteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/background"
+            android:src="@drawable/ic_delete"
+            android:layout_margin="@dimen/default_padding"
+            />
+    </LinearLayout>
 </LinearLayout>
