--- a/mobile/src/main/res/layout/content_one_news.xml
+++ b/mobile/src/main/res/layout/content_one_news.xml
@@ -12,83 +12,102 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.platelkevin.newsstream.newsstream.OneNewsActivity"
     tools:showIn="@layout/activity_one_news">
-
-    <TextView
-        android:id="@+id/from"
-        android:gravity="center_horizontal"
-        android:text="@string/tmp_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tmp_text"
-        android:textSize="@dimen/title_size"
-        android:textStyle="bold"
-        />
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:text="@string/tmp_text"
-            android:textSize="@dimen/title_size"
-            android:textStyle="italic"
-            />
-        <TextView
-            android:id="@+id/author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tmp_text"
-            android:textSize="@dimen/title_size"
-            />
-    </LinearLayout>
-    <ImageView
-        android:id="@+id/imgUrl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="150dp"
-        android:contentDescription="@string/news_image_desc"
-        />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
             <TextView
-                android:id="@+id/content"
+                android:id="@+id/from"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/background"
+                android:gravity="center_horizontal"
+                android:text="@string/tmp_text"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tmp_text"
+                android:textSize="@dimen/title_size"
+                android:textStyle="bold"
+                />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:text="@string/tmp_text"
+                    android:textSize="@dimen/title_size"
+                    android:textStyle="italic"
+                    />
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tmp_text"
+                    android:textSize="@dimen/title_size"
+                    />
+            </LinearLayout>
+            <ImageView
+                android:id="@+id/imgUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="150dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/news_image_desc"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
                 >
-                <Button
-                    android:id="@+id/see_more"
-                    android:text="@string/see_more"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    />
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+                    <TextView
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        style="?android:attr/buttonBarStyle"
+                        >
+                        <Button
+                            android:id="@+id/see_more"
+                            android:text="@string/see_more"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            style="?android:attr/buttonBarStyle"
+                            />
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            style="?android:attr/buttonBarStyle"
+                            />
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
