--- a/mobile/src/main/res/layout/fragment_news.xml
+++ b/mobile/src/main/res/layout/fragment_news.xml
@@ -37,6 +37,8 @@
                     android:textSize="@dimen/title_size"
                     android:text="@string/news_image_desc"
                     android:textStyle="bold"
+                    android:paddingLeft="@dimen/default_padding"
+                    android:paddingRight="@dimen/default_padding"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:textColor="@color/background"
@@ -60,6 +62,7 @@
                 android:text="@string/news_image_desc"
                 android:textStyle="bold"
                 android:textSize="@dimen/title_size"
+                android:padding="@dimen/text_margin"
                 android:layout_width="match_parent"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"
@@ -71,6 +74,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/title"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingRight="@dimen/default_padding"
                 android:layout_marginBottom="@dimen/margin_bottom"
                 />
             <TextView
@@ -78,6 +83,8 @@
                 android:text="@string/news_image_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/default_padding"
+                android:paddingRight="@dimen/default_padding"
                 android:layout_below="@+id/date"
                 />
             <TextView
